# gt8004-sdk

./: README.md  pyproject.toml  setup.py
.claude/commands/: git-commit-main.md  git-commit.md
.github/workflows/: integration.yml
examples/: fastapi_example.py
gt8004/: logger.py  transport.py  types.py
gt8004/middleware/: __init__.py  _extract.py  asgi.py  fastapi.py  flask.py  mcp.py
tests/: test_extract.py  test_fastapi_middleware.py  test_integration.py  test_logger.py
