[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gt8004-sdk"
version = "0.2.0"
description = "Python SDK for GT8004 agent analytics and observability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GT8004 Team", email = "support@gt8004.com"}
]
keywords = ["gt8004", "analytics", "observability", "agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://gt8004.xyz"
Documentation = "https://github.com/vataops/gt8004-sdk#readme"
Repository = "https://github.com/vataops/gt8004-sdk"
"Bug Tracker" = "https://github.com/vataops/gt8004-sdk/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
